generated-tests/tests/snapshots/rust/test_generated_call_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
test_fn2(a1, b1)

AST:
(source_file
  (expression_statement
    (call_expression
      (identifier test_fn2)
      (arguments
        (identifier a1)
        (identifier b1)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "test_fn2(a1, b1)",
            kind: CallExpression,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 17,
            },
        },
        Usage {
            name: "test_fn2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "a1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 12,
            },
        },
        Usage {
            name: "b1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
