generated-tests/tests/snapshots/rust/test_generated_captured_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x2 { y1 @ Some(_) => y1 }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "x2")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (captured_pattern
              (identifier "y1")
              (tuple_struct_pattern
                type: (identifier "Some")
              )
            )
          )
          value: (identifier "y1")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "y1",
            position: Position {
                start_line: 1,
                start_column: 12,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "y1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 12,
                end_line: 1,
                end_column: 14,
            },
        },
        Usage {
            name: "Some",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 21,
            },
        },
        Usage {
            name: "y1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 30,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
