generated-tests/tests/snapshots/rust/test_generated_dynamic_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var3: Box<dyn std::fmt::Display> = Box::new(42);

AST:
(source_file
  (let_declaration
    (identifier var3)
    (generic_type
      (type_identifier)
      (type_arguments
        (dynamic_type
          (scoped_type_identifier
            (scoped_identifier
              (identifier std)
              (identifier fmt)
            )
            (type_identifier)
          )
        )
      )
    )
    (call_expression
      (scoped_identifier
        (identifier Box)
        (identifier new)
      )
      (arguments
        (integer_literal)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var3",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "std",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 19,
            end_line: 1,
            end_column: 22,
        },
        SerializableUsage {
            name: "fmt",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 24,
            end_line: 1,
            end_column: 27,
        },
        SerializableUsage {
            name: "Box::new(42)",
            kind: CallExpression,
            scope: None,
            start_line: 1,
            start_column: 40,
            end_line: 1,
            end_column: 52,
        },
        SerializableUsage {
            name: "Box",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 40,
            end_line: 1,
            end_column: 43,
        },
        SerializableUsage {
            name: "new",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 45,
            end_line: 1,
            end_column: 48,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
