generated-tests/tests/snapshots/rust/test_generated_enum_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
enum TestEnum { Variant(i32) }

AST:
(source_file
  (enum_item
    name: (type_identifier "TestEnum")
    body: (enum_variant_list
      (enum_variant
        name: (identifier "Variant")
        body: (ordered_field_declaration_list
          type: (primitive_type "i32")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestEnum",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 14,
            },
            definition_type: EnumDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Variant",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 24,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
