generated-tests/tests/snapshots/rust/test_generated_expression_statement.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
a2 + b2;

AST:
(source_file
  (expression_statement
    (binary_expression
      (identifier a2)
      (identifier b2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "a2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 3,
            },
        },
        Usage {
            name: "b2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 8,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
