generated-tests/tests/snapshots/rust/test_generated_field_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
obj.field

AST:
(source_file
  (ERROR
    (field_expression
      value: (identifier "obj")
      field: (field_identifier "field")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "obj.field",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 10,
            },
        },
        Usage {
            name: "obj",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 4,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
